# my-lead-engine

./: .cursorignore  .dockerignore  .gitignore  .railway-clear-cache  AUDIT_SOVEREIGN_NEURAL_PIPELINE.md  BRAINSCRAPER_BUILD_FIX.md  CAPSOLVER_SETUP.md  CHIMERA_BRAIN_HEALTHCHECK_FIX.md  CHIMERA_OFFLINE_DIAGNOSIS.md  CHIMERA_RAILWAY_CONFIG.md  CHIMERA_READINESS.md  CHIMERA_STABLE_V1.md  CLI_DEPLOYMENT_RESULTS.md  COMMIT_ALL_SERVICES.sh  CONFIG_AS_CODE_FIX.md  CRITICAL_WATCH_PATHS_FIX.md  DASHBOARD_WATCH_PATHS_SYNC.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_2026_01_18.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TRIPLE_VESSEL.md  DEPLOYMENT_VERIFIED.md  DEPLOY_ALL_SERVICES.md  DOCKER_BUILD_FIXES.md  DOCKER_MIGRATION_COMPLETE.md  Dockerfile  ENRICHMENT_FAILURE_MAP.md  ENRICHMENT_FULL_TEST_CHECKLIST.md  ENRICHMENT_SETUP.md  ENRICHMENT_TEST.md  ENRICHMENT_TONIGHT.md  FINAL_DASHBOARD_FIX_CHECKLIST.md  FIX_COMMIT_FILES.md  FIX_RAILPACK_ERROR.md  FORCE_DEPLOY_COMPLETE.md  GITIGNORE_ANALYSIS.md  LINKEDIN_ENRICHMENT_FLOW.md  MONOREPO_RAILWAY_SETUP.md  PEOPLE_SEARCH_CHECKLIST.md  (+53 more)
chimera-core/: CACHE_BREAKER_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT_VERIFICATION.md  DOCKERFILE_REMOVED.md  Dockerfile  GOLDEN_HANDSHAKE_ACHIEVED.md  PHASE_1_BIOLOGICAL_RESTORATION.md  PHASE_2_DEPLOYMENT_STATUS.md  PHASE_2_ENHANCED_COMPLETE.md  PHASE_2_MANDATORY_PERSISTENCE.md  PHASE_2_PERSISTENCE_COMPLETE.md  PHASE_3_ISOMORPHIC_COMPLETE.md  README.md  STEALTH_AUDIT.md  STEALTH_IMPLEMENTATION_COMPLETE.md  TELEMETRY_INTEGRATION_EXAMPLE.md  URGENT_DASHBOARD_FIX.md  biological.py  build.rs  (+21 more)
(+284 files in other folders)
